--- a/app_Marketing/templates/Elaborar_campania.html
+++ b/app_Marketing/templates/Elaborar_campania.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+<!-- Mostramos el menu para movernos por las paginas -->
+{% extends "layouts/base.html" %}
+{% block content %}
+
     <title>Mercado</title>
     <h1>elavorar capania</h1>
+
+{% endblock %}
 </body>
 </html>
