--- a/app_Marketing/templates/Mercado.html
+++ b/app_Marketing/templates/Mercado.html
@@ -6,7 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+<!-- Mostramos el menu para movernos por las paginas -->
+{% extends "layouts/base.html" %}
+{% block content %}
+
     <title>Mercado</title>
     <h1>Mercado</h1>
+
+
+{% endblock %}
 </body>
 </html>
