--- a/app_Marketing/templates/ver_eventos_campania.html
+++ b/app_Marketing/templates/ver_eventos_campania.html
@@ -6,7 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+<!-- Mostramos el menu para movernos por las paginas -->
+<div>
+{% extends "layouts/base.html" %}
+
+{% block content %}
+</div>
     <title>Mercado</title>
     <h1>ver eventos y campania</h1>
+
+
+{% endblock %}
 </body>
 </html>
