--- a/app_Marketing/templates/Planificar_evento.html
+++ b/app_Marketing/templates/Planificar_evento.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- Incluye los archivos CSS y JS de FullCalendar -->
-    <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css' rel='stylesheet' />
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js'></script>
-
     <title>Planificar evento</title>
 </head>
 <body>
+<!-- Mostramos el menu para movernos por las paginas -->
+{% extends "layouts/base.html" %}
+{% block content %}
 <!-- Elemento HTML donde se mostrará el calendario -->
 <div id="calendar"></div>
 
@@ -48,5 +44,6 @@
   <button type="button" class="btn btn-success">Guardar</button>
   <button type="button" class="btn btn-danger">Cancelar</button>
 
+{% endblock %}
 </body>
 </html>
