--- a/app_Marketing/templates/login.html
+++ b/app_Marketing/templates/login.html
@@ -11,24 +11,31 @@
 <body>
 
     <form>
-        <div class="container">
-        <div class="d-flex flex-column justify-content-center align-items-center full-height">
-        <div class="col-3 ">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <div class="container custom-container  d-flex justify-content-md-center align-items-center  min-vh-100">
+        <div class="row w-50">
+            <div class="col-md-12 " >
+                <div class="card">
+                    <div class="card-header text-center">
+                        <h3>Login</h3>
+                    </div>
+                    <div class="card-body">
+                        <form method="post" action="">
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name" name="name" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        </div>
-        <div class="col-3">
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        </div>
-        <div class="d-flex flex-row-reverse">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+    </div>
+    
       </form>
     </div>
     </div>
