--- a/app_Marketing/templates/layouts/base.html
+++ b/app_Marketing/templates/layouts/base.html
@@ -37,6 +37,9 @@
                         <li class="nav-item ">
                             <a class="nav-link {% if current_page == 'Mercado' %} active {% endif %}" href="{% url 'Mercado' %}">Mercado</a>
                           </li>
+                          <li class="nav-item ">
+                            <a class="nav-link" href="{% url 'Exit' %}">Cerrar secion</a>
+                          </li>
                       </ul>
                     </div>
                   </div>
