--- a/app_Marketing/templates/registration/login.html
+++ b/app_Marketing/templates/registration/login.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-    <form>
+    <form action="" method="post">
+        {% csrf_token %}
       <div class="container custom-container  d-flex justify-content-md-center align-items-center  min-vh-100">
         <div class="row w-50">
             <div class="col-md-12 " >
@@ -22,7 +23,7 @@
                         <form method="post" action="">
                             <div class="form-group">
                                 <label for="name">Name</label>
-                                <input type="text" class="form-control" id="name" name="name" required>
+                                <input type="text" class="form-control" id="username" name="username" required>
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
