--- a/app_Marketing/templates/Mercado.html
+++ b/app_Marketing/templates/Mercado.html
@@ -9,6 +9,8 @@
 <!-- Mostramos el menu para movernos por las paginas -->
 {% extends "layouts/base.html" %}
 {% block content %}
+<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
 
     <title>Mercado</title>
     <h1>Mercado</h1>
