--- a/app_Marketing/templates/Elaborar_campania.html
+++ b/app_Marketing/templates/Elaborar_campania.html
@@ -108,8 +108,8 @@
 
     <div class="text-center mt-5">
         <h5>Crear campaña en:</h5>
-        <button class="btn btn-social-icon btn-instagram"><i class="fab fa-instagram">Instagram</i></button>
-        <button class="btn btn-social-icon btn-facebook"><i class="fab fa-facebook-f">Facebook</i></button>
+        <button class="btn btn-social-icon btn-instagram"><i class="fab fa-instagram">Instagramm</i></button>
+        <button class="btn btn-social-icon btn-facebook"><i class="fab fa-facebook-f">Facebookk</i></button>
     </div>
 </div>
 {% endblock %}
