--- a/app_Marketing/templates/Elaborar_campania.html
+++ b/app_Marketing/templates/Elaborar_campania.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .calendar {
+            width: 100%;
+            height: auto;
+        }
+        .image-upload input {
+            display: none;
+        }
+        .image-upload label {
+            cursor: pointer;
+        }
+        .image-upload-preview {
+            width: 100%;
+            height: auto;
+            border: 1px solid #ddd;
+            margin-top: 10px;
+            padding: 10px;
+            text-align: center;
+            line-height: 200px;
+        }
+    </style>
 </head>
 <body>
 <!-- Mostramos el menu para movernos por las paginas -->
