--- a/app_Marketing/templates/ver_eventos_campania.html
+++ b/app_Marketing/templates/ver_eventos_campania.html
@@ -27,6 +27,7 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
+                        <th>Fecha</th>
                         <th>Nombre del evento</th>
                         <th>Música</th>
                         <th>Comida</th>
@@ -35,27 +36,16 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for evento in eventos %}
                     <tr>
-                        <td>Celebración madres</td>
-                        <td>Baladas</td>
-                        <td>No hay</td>
-                        <td>Rifa</td>
+                        <td>{{ evento.fechaRealizacion }}</td>
+                        <td>{{ evento.nombreEvento }}</td>
+                        <td>{{ evento.musica }}</td>
+                        <td>{{ evento.comida }}</td>
+                        <td>{{ evento.actividadRecreativa }}</td>
                         <td><button class="btn btn-primary">Editar</button></td>
                     </tr>
-                    <tr>
-                        <td>Independencia</td>
-                        <td>Banda de guerra</td>
-                        <td>Comida típica</td>
-                        <td>Regalos sorpresa</td>
-                        <td><button class="btn btn-primary">Editar</button></td>
-                    </tr>
-                    <tr>
-                        <td>Año nuevo chino</td>
-                        <td>Electrónica</td>
-                        <td>Galletas</td>
-                        <td>Juegos de mesa</td>
-                        <td><button class="btn btn-primary">Editar</button></td>
-                    </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
@@ -67,39 +57,27 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Nombre campaña</th>
-                            <th>Archivo de imagen</th>
+                            <th>Nombre de la campaña</th>
                             <th>Fecha inicio</th>
                             <th>Fecha final</th>
-                            <th>Descripción</th>
+                            <th>Comida</th>
+                            <th>Descripción de campaña</th>
+                            <th>imagen</th>
                             <th>Modificar</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for campania in campanias %}
                         <tr>
-                            <td>Campaña 1</td>
-                            <td>imgCampaña1</td>
-                            <td>12/02/24</td>
-                            <td>15/02/24</td>
-                            <td>Descripción 1</td>
+                            <td>{{ campania.nombreCampania }}</td>
+                            <td>{{ campania.fechaInicio }}</td>
+                            <td>{{ campania.fechaFinal }}</td>
+                            <td>{{ campania.descripcion }}</td>
+                            <td>{{ campania.presupuesto }}</td>
+                            <td>{{ campania.imagen }}</td>
                             <td><button class="btn btn-primary">Editar</button></td>
                         </tr>
-                        <tr>
-                            <td>Campaña 2</td>
-                            <td>imgCampaña2</td>
-                            <td>11/11/24</td>
-                            <td>15/11/24</td>
-                            <td>Descripción 2</td>
-                            <td><button class="btn btn-primary">Editar</button></td>
-                        </tr>
-                        <tr>
-                            <td>Campaña 3</td>
-                            <td>imgCampaña3</td>
-                            <td>20/12/24</td>
-                            <td>25/12/24</td>
-                            <td>Descripción 3</td>
-                            <td><button class="btn btn-primary">Editar</button></td>
-                        </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
