--- a/app_Marketing/templates/layouts/base.html
+++ b/app_Marketing/templates/layouts/base.html
@@ -15,13 +15,13 @@
         <nav>
             <nav class="navbar navbar-light bg-light fixed-top">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Offcanvas navbar</a>
+                    <img src="Logo.png" alt="informacion de la imagen">
                   <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                        <img src="Logo.png" alt="Descripción de la imagen">
                       <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
